src/objects/ACCL__Account_Task__c.object
<CustomObject>
    <description>Holds the details of the customer task (customer issue).</description>
    <fields>
        <fullName>ACCL__Account_Task_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the template.</description>
        <label>Customer Task Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ACCL__Account_Task_Template__c.ACCL__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Account_Task_Template__c</referenceTo>
        <relationshipLabel>Customer Tasks</relationshipLabel>
        <relationshipName>Customer_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Account__c</fullName>
        <description>Reference to the customer.</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Tasks</relationshipLabel>
        <relationshipName>Customer_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Accountable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the owner of the task.</description>
        <label>Accountable</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to asset.</description>
        <label>Asset</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Customer Task and the Asset must have the same Sales Org.</errorMessage>
            <filterItems>
                <field>$Source.ACCL__Sales_Org__c</field>
                <operation>equals</operation>
                <valueField>Asset.ACCL__Sales_Org__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Customer Tasks</relationshipLabel>
        <relationshipName>Customer_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Classification__c</fullName>
        <description>Specifies the area that causes the issue.</description>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inquiry</fullName>
                    <default>true</default>
                    <label>Inquiry</label>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Placement</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Vehicle</fullName>
                </value>
                <value>
                    <fullName>TimeEntry</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Repair Asset</fullName>
                </value>
                <value>
                    <fullName>Asset Maintenance</fullName>
                </value>
                <value>
                    <fullName>Asset Replacement</fullName>
                </value>
                <value>
                    <fullName>Asset Retirement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Creation_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date of creation of customer task.</description>
        <label>Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_1__c</fullName>
        <description>Holds the description of language 1.</description>
        <label>Description Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_2__c</fullName>
        <description>Holds the description of language 2.</description>
        <label>Description Language 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_3__c</fullName>
        <description>Holds the description of language 3.</description>
        <label>Description Language 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description__c</fullName>
        <description>Description based on the user specific language.</description>
        <formula>CASE($User.ACCL__Language_Postfix__c,
  &quot;Language1&quot;, ACCL__Description_Language_1__c,
  &quot;Language2&quot;, BLANKVALUE(ACCL__Description_Language_2__c,ACCL__Description_Language_1__c),
  &quot;Language3&quot;, BLANKVALUE(ACCL__Description_Language_3__c,ACCL__Description_Language_1__c),
  &quot;Language4&quot;, BLANKVALUE(ACCL__Description_Language_4__c,ACCL__Description_Language_1__c),
  ACCL__Description_Language_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Due_Date__c</fullName>
        <description>The date the action should have been done.</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Note__c</fullName>
        <description>Note for a customer task.</description>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__Phase__c</fullName>
        <description>Phase of the customer task.</description>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                    <default>true</default>
                    <label>Initial</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Send to SAP</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Priority__c</fullName>
        <description>Priority of the customer task.</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the responsible user.</description>
        <label>Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <description>Describes the sales org to which the account task belongs to.</description>
        <label>Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ACCL__Sales_Org</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Workflow__c</fullName>
        <description>Reference to workflow.</description>
        <formula>ACCL__Account_Task_Template__r.ACCL__Workflow__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Workflow</label>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MDLZ_AccTeam__c</fullName>
        <description>Indicates the team information of the account. Used for filtering.</description>
        <formula>ACCL__Account__r.MDLZ_AccountTeam__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_AccTerritory__c</fullName>
        <description>Indicates the territory information of the account. Used for filtering.</description>
        <formula>ACCL__Account__r.MDLZ_AccountTerritory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory</label>
        <type>Text</type>
    </fields>
<fields>
        <fullName>MDLZ_Answers__c</fullName>
        <label>Answers</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MDLZ_Categories__c</fullName>
        <label>Categories</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Before the Store</fullName>
                </value>
                <value>
                    <fullName>At the Store</fullName>
                </value>
                <value>
                    <fullName>After the Store</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDLZ_Customer_Sets__c</fullName>
        <label>Customer Sets</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MDLZ_ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_Master_Record__c</fullName>
        <label>Master Record</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_PODInvoiceNumber__c</fullName>
        <label>POD Invoice Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_Parent_RecordId__c</fullName>
        <label>Parent RecordId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MDLZ_Questions__c</fullName>
        <label>Questions</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MDLZ_Unique_Name__c</fullName>
        <label>Unique Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Customer Task</label>
    <listViews>
        <fullName>ACCL__All</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Description__c</columns>
        <columns>ACCL__Account_Task_Template__c</columns>
        <columns>ACCL__Priority__c</columns>
        <columns>ACCL__Account__c</columns>
        <columns>ACCL__Due_Date__c</columns>
        <columns>ACCL__Phase__c</columns>
        <columns>ACCL__Responsible__c</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MDLZ_Customer_Announcement</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Account__c</columns>
        <columns>ACCL__Due_Date__c</columns>
        <columns>ACCL__Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ACCL__Account_Task__c.MDLZ_Customer_Announcement</value>
        </filters>
        <label>Customer Announcement</label>
    </listViews>
    <nameField>
        <displayFormat>CT-{00000}</displayFormat>
        <label>Customer Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Tasks</pluralLabel>
    <recordTypes>
        <fullName>ACCL__Customer_Task_Editable</fullName>
        <active>true</active>
        <description>Custom record type for Customer Task</description>
        <label>Customer Task Editable</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACCL__Customer_Task_Read_Only</fullName>
        <active>true</active>
        <description>This is showing the Locked Customer Task Layout, where Phase is canceled or Completed</description>
        <label>Customer Task Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>MDLZ_Customer_Announcement</fullName>
        <active>true</active>
        <description>Created as per MRELKXIW-3845</description>
        <label>Customer Announcement</label>
    </recordTypes>
    <recordTypes>
        <fullName>MDLZ_POD</fullName>
        <active>true</active>
        <description>Created as per MRELKXIW-3850</description>
        <label>POD</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Planning</fullName>
        <active>true</active>
        <description>To store &apos;Sales Planning&apos; related answers set up in Data Type object</description>
        <label>Sales Planning</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__Mandatory_Entries</fullName>
        <active>false</active>
        <description>The Customer Task mandatory fields can&apos;t be empty.</description>
        <errorConditionFormula>OR(
ISBLANK(ACCL__Account__c),
ISBLANK(ACCL__Description_Language_1__c),
ISBLANK(ACCL__Account_Task_Template__c),
ISPICKVAL(ACCL__Priority__c,&quot;&quot;)
)</errorConditionFormula>
        <errorMessage>The Customer Task mandatory fields can&apos;t be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Prevent_Customer_Task_Template_Change</fullName>
        <active>true</active>
        <description>The Customer Task Template can&apos;t be edited after Customer creation.</description>
        <errorConditionFormula>ISCHANGED(ACCL__Account_Task_Template__c )</errorConditionFormula>
        <errorDisplayField>ACCL__Account_Task_Template__c</errorDisplayField>
        <errorMessage>The Customer Task Template can&apos;t be edited after Customer creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Entries_New</fullName>
        <active>false</active>
        <description>The Customer Task mandatory fields can&apos;t be empty.</description>
        <errorConditionFormula>OR(
  ISBLANK(ACCL__Account__c),
  ISBLANK(ACCL__Description_Language_1__c),
  RecordTypeId = &quot;0123K00000017n5QAA&quot;
  )</errorConditionFormula>
        <errorMessage>The Customer, Description Language 1 and Customer Task Template can&apos;t be empty.</errorMessage>
    </validationRules>
</CustomObject>